feat:  added to landing page(wp)

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link href="./fontawesome icons/css/fontawesome.css" rel="stylesheet" />
     <link href="./fontawesome icons/css/brands.css" rel="stylesheet" />
     <link href="./fontawesome icons/css/solid.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+      integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V"
+      crossorigin="anonymous"
+    />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
